--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,7 @@ body{
 }
 h1,h2{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: bisque;
+    color: palevioletred;
     background-color: e9496c;
 }
 
