--- a/Public/styles/Style.css
+++ b/Public/styles/Style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/bg1.jpeg");
     background-size: cover;
 }
 h1,h2{
